tests/ui/imports/import-from-missing-star-3.stderr
error[E0432]: unresolved import `spam`
  --> $DIR/import-from-missing-star-3.rs:2:9
   |
LL |     use spam::*;
   |         ^^^^ use of unresolved module or unlinked crate `spam`
   |
help: you might be missing a crate named `spam`, add it to your project and import it in your code
   |
LL + extern crate spam;
   |

error[E0432]: unresolved import `spam`
  --> $DIR/import-from-missing-star-3.rs:27:13
   |
LL |         use spam::*;
   |             ^^^^ use of unresolved module or unlinked crate `spam`
   |
help: you might be missing a crate named `spam`, add it to your project and import it in your code
   |
LL + extern crate spam;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
